--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: "/amis-exchange-www"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: AMIS Exchange
+title: AMIS Dex Exchange
 
 # Short description of your site
 description: Official AMIS Dex exchange featuring on-chain orderbook and order matching engine powered by Ethereum Blockchain
@@ -62,7 +62,7 @@ footer-links-active:
   facebook: true
   email: false
   twitter: true
-  google-plus: true
+  google-plus: false
   github: true
   reddit: true
   linkedin: false
@@ -81,7 +81,7 @@ footer-links-active:
 share-links-active:
   twitter: true
   facebook: true
-  google: true
+  google: false
   linkedin: true
 
 # How to display the link to the website in the footer
